# tzparser

./: .dockerignore  .env.example  .gitignore  CHANGES_REQUIRED.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  task.md  used-ways.md
data/: inns.xlsx
scripts/: create_sample_xlsx.py  test_camoufox.py  test_fedresurs.py  test_kad_camoufox.py
src/: __init__.py  config.py  main.py
src/db/: __init__.py  session.py
src/models/: __init__.py  db_models.py
src/parsers/: __init__.py  base.py  base_camoufox.py  fedresurs.py  fedresurs_camoufox.py  fedresurs_nodriver.py  fedresurs_tor.py  kad_arbitr.py  kad_arbitr_camoufox.py
src/utils/: __init__.py  agents.py  xlsx_reader.py
